--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-# Object file
-*.o
-
-# Ada Library Information
-*.ali
-/node_modules
-*.css
-*.map
-/.idea
-/.project
+.DS_Store
+node_modules
 /dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
