--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.1",
+    "@types/qiniu": "^7.0.1",
     "mysql": "^2.17.1",
+    "qiniu": "^7.2.2",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
