--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.1",
     "@types/qiniu": "^7.0.1",
     "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "qiniu": "^7.2.2",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
