--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^6.1.2",
     "@types/qiniu": "^7.0.1",
     "mysql": "^2.17.1",
+    "nestjs-config": "^1.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "qiniu": "^7.2.2",
