--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^3.0.2",
     "@nestjs/typeorm": "^6.1.2",
     "@types/qiniu": "^7.0.1",
+    "cookie-parser": "^1.4.4",
     "mysql": "^2.17.1",
     "nestjs-config": "^1.4.2",
     "passport": "^0.4.0",
