--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@nestjs/typeorm": "^6.1.2",
     "@types/qiniu": "^7.0.1",
     "cookie-parser": "^1.4.4",
+    "jssha": "^2.3.1",
     "mysql": "^2.17.1",
     "nestjs-config": "^1.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "qiniu": "^7.2.2",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.0",
     "rimraf": "^2.6.3",
     "rxjs": "^6.5.2",
     "swagger-ui-express": "^4.0.6",
