--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.3.1",
+    "@nestjs/platform-socket.io": "^6.6.7",
     "@nestjs/swagger": "^3.0.2",
     "@nestjs/typeorm": "^6.1.2",
+    "@nestjs/websockets": "^6.6.7",
     "@types/qiniu": "^7.0.1",
     "cookie-parser": "^1.4.4",
     "jssha": "^2.3.1",
@@ -43,11 +45,12 @@
     "typeorm": "^0.2.18"
   },
   "devDependencies": {
+    "@nestjs/testing": "^6.3.1",
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.14",
     "@types/node": "^10.12.18",
+    "@types/socket.io": "^2.1.2",
     "@types/supertest": "^2.0.7",
-    "@nestjs/testing": "^6.3.1",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.1",
